# OpenMixerXR

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
actions/: actions.json
docs/: architecture.md  quest-setup.md
installer/: OpenMixerXR.nsi
res/: manifest.vrmanifest
src/: ChromaRenderer.cpp  ChromaRenderer.h  Config.h  D3D11Backend.cpp  D3D11Backend.h  DashboardUI.cpp  DashboardUI.h  DeviceTracker.cpp  DeviceTracker.h  GrabController.cpp  GrabController.h  LayoutStore.cpp  LayoutStore.h  Logger.h  MathHelpers.h  OverlayManager.cpp  OverlayManager.h  PassthroughBox.cpp  PassthroughBox.h  main.cpp
tests/: box_transform_test.cpp  cuboid_transform_test.cpp  layout_serialization_test.cpp
